--- a/CsCourse/CsCourse.csproj
+++ b/CsCourse/CsCourse.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="KillCircle.cs" />
     <Compile Include="Object.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="Program.cs" />
